fixed some problems.